--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: linear-gradient(116deg, #BBD2FF 0.82%, #B9FFEE 100%);
 }
 
 .App-logo {
@@ -24,9 +25,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+
 
 @keyframes App-logo-spin {
   from {
