--- a/src/pages/homepage/componentsHome/header.css
+++ b/src/pages/homepage/componentsHome/header.css
@@ -1,12 +1,18 @@
-#head {
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
     height: 100vh;
-    background: radial-gradient(circle, rgb(99, 102, 108) 0%, rgba(144, 224, 238, 1) 35%, rgba(202, 240, 248, 1) 100%);
+}
+
+#head {
+    width: 100%;
+    height: 100vh;
+    flex-shrink: 0;
 }
 
 h1 {
     font-size: 5rem; 
     top: -20%; 
     margin-left:10%;
-
-
 }
