--- a/src/pages/homepage/componentsHome/what.css
+++ b/src/pages/homepage/componentsHome/what.css
@@ -1,15 +1,16 @@
-#body
-{
-    height:80vh;
+@import './header.css';
+
+#body {
+    width: 100%;
+    height: 100vh;
+    flex-shrink: 0;
 }
 
-h1{
+h1 {
     margin-bottom:10%;
     margin-left:45%;
 }
 
-Row{
+Row {
     margin:5px;
-
 }
-
