--- a/src/pages/homepage/componentsHome/header.css
+++ b/src/pages/homepage/componentsHome/header.css
@@ -12,7 +12,14 @@ body {
 }
 
 h1 {
-    font-size: 5rem; 
-    top: -20%; 
-    margin-left:10%;
+    width: 927px;
+    height: 112px;
+    flex-shrink: 0;
+    color: #475CA6;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Inter;
+    font-size: 80px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: normal;
 }
